# Go2Controller

./: .gitignore  lab_map.data  lab_map.pgm  lab_map.yaml  stt_command
bt_msgs/: CMakeLists.txt  package.xml
bt_rssi_mapper/: package.xml  setup.cfg  setup.py
bt_rssi_mapper/bt_rssi_mapper/: bt_rssi_mapper.py
coco_detector/: setup.py
coco_detector/coco_detector/: coco_detector_node.py
go2_commander/: package.xml  setup.cfg  setup.py
go2_commander/go2_commander/: llm_task_manager.py  openai_command_parser.py
go2_commander/launch/: bringup.launch.py
go2_nav_utils/: package.xml  setup.cfg  setup.py
go2_nav_utils/go2_nav_utils/: contour_waypoints.py
go2_robot_sdk/config/: mapper_params_online_async.yaml  nav2_params.yaml
go2_robot_sdk/launch/: robot.launch.py
odas_bridge/: package.xml  setup.cfg  setup.py
odas_bridge/odas_bridge/: active_channel_selector.py  localized_speech_publisher.py  odas_audio_receiver.py  odas_tracked_receiver.py  rviz_doa_marker.py  save_audio_wav.py  ssldoareader.py  stt_angle.py  stt_angle2.py
person_follow/: package.xml  setup.py
person_follow/person_follow/: person_follower_node.py
speech_processor/speech_processor/: tts_node.py
stt_node/: package.xml  setup.py
stt_node/launch/: odas_stt_localized.launch.py
stt_node/stt_node/: stt_subscriber.py
vlm_pkg/: package.xml  setup.cfg  setup.py
vlm_pkg/launch/: vlm.launch.py
vlm_pkg/vlm_pkg/: qwen_vlm_server.py
